--- a/Student-Perfomance-Angular-Client/package.json
+++ b/Student-Perfomance-Angular-Client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@ngneat/until-destroy": "^7.1.6",
+    "angular-auth-oidc-client": "^11.1.2",
     "moment": "^2.18.1",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
